PHP 4                                                                      NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ?? 2008, Version 4.4.9
- Updated PCRE to version 7.7. (Nuno)

03 Jan 2008, Version 4.4.8
- Improved fix for MOPB-02-2007. (Ilia)
- Fixed an integer overflow inside chunk_split(). Identified by Gerhard Wagner.
  (Ilia)
- Fixed integer overlow in str[c]spn(). (Stas)
- Fixed regression in glob when open_basedir is on introduced by #41655 fix
  (Pierre)
- Fixed money_format() not to accept multiple %i or %n tokens. (Stas, Ilia)
- Addded "max_input_nesting_level" php.ini option to limit nesting level of 
  input variables. Fix for MOPB-03-2007. (Stas)
- Fixed INFILE LOCAL option handling with MySQL - now not allowed when 
  open_basedir or safe_mode is active (Stas)
- Fixed session.save_path and error_log values to be checked against
  open_basedir and safe_mode (CVE-2007-3378) (Stas, Maksymilian Arciemowicz)
- Fixed bug #43010 (Fixed regression in imagearc with two equivelent angles)
  (Pierre)
- Fixed bug #41765 (Recode crashes/does not work on amd64) 
  (nexus at smoula dot net, Stas)
- Fixed bug #41630 (segfault when an invalid color index is present in
  the image data). (Reported by Elliot <wccoder@gmail dot com>) (Pierre)
- Fixed bug #41628 (PHP settings leak between Virtual Hosts in
  Apache 1.3). (Scott, manuel at mausz dot at)
- Fixed bug #38798 (OpenSSL init corrected in php5 but not in php4). (Tony)

04 May 2007, Version 4.4.7
- Fixed libgd #86 (Fixed possible infinite loop in imagecreatefrompng) 
  (Reported by Xavier Roche) (Pierre)
- Fixed MOPB-33-2007 (PHP mail() Message ASCIIZ Byte Truncation). (Ilia)
- Fixed MOPB-32-2007 (Double free inside session_decode()). (Ilia)
- Fixed MOPB-26-2007 (mb_parse_str() can be used to activate
  register_globals). (Ilia)
- Fixed MOPB-24-2007 (Fixed unallocated memory access/double free in in
  array_user_key_compare()).  (Stas)